== Upgrade Notice ==

= 1.4.18 =
Many method names have been changed. Any custom filters may need to be updated.

= 1.4.10 =
All script, style and body tags are stripped from html emails.

= 1.4.6 =
Attachments are now processed in the order they were attached.

== CHANGELOG ==
= 1.4.26 (2013.01.15) =
* Fixed a bug where signatures were not removed in html emails

= 1.4.25 (2013.01.15) =
* Fixed a bug where newlines were being removed erroneously.

= 1.4.24 (2013.01.13) =
* Fixed a bug where the original attachment name wasn't being used.
* Fixed a bug where the #eimg# tags in the excerpt were not getting expanded.

= 1.4.23 (2013.01.10) =
* Fixed a bug with embedded CID referenced images.

= 1.4.22 (2013.01.10) =
* Fixed a bug where the subject was not being properly decoded when Q-encoding was used.
* Fixed a bug in #img# caption detection.
* Fixed a bug where the tag command was picking up too much text.
* Enhanced the date command to allow times as well.

= 1.4.21 (2013.01.09) =
* Removed all Call-time pass-by-references to support PHP 5.4

= 1.4.20 (2013.01.08) =
* Added Date feature. You can now specify a specific publication date.
* Fixed a bug with embeded youtube/vimeo links when shortcodes are turned off

= 1.4.19 (2013.01.07) =
* Fixed a bug that prevented the settings from being saved

= 1.4.18 (2013.01.06) =
* Fixed a bug where linkifying was doing too much.
* Updated lots of method names in preparation for some significant structural changes.

= 1.4.17 (2013.01.03) =
* Fixed a bug where non image/video attachments were not getting added to the post.

= 1.4.16 (2013.01.03) =
* Fixed a bug where an extra div tag was getting added.
* Fixed a bug when linkifying URLs.
* Fixed a bug where inline images were not being detected.

= 1.4.15 (2013.01.02) =
* Fixed a bug when a category is specified with [] and a colon (:) is in the subject, but not specifying a category

= 1.4.14 (2012.12.29) =